# LocationSpot

./: .gitignore  README.md  Sample.env  docker-compose.yml  main.py  ntfy.docker-compose.yml  om_aqi_cache.json  owntracks.docker-compose.yml  pyproject.toml
